Fixed navbar, starting to fix spacing in contact page

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,15 @@
 body {
   font-family: "Inter", sans-serif;
 }
+
+.blurry-bg {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: inherit;
+  filter: blur(8px);
+  z-index: -1;
+}
